--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>My Portfolio</title>
 </head>
+
 <body>
-    
+    <section class="banner">
+        <div class="part1">
+            <h1>Welcome to</h1>
+            <h1><span>Ubaydur Rahman's</span> World!</h1>
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, quas asperiores. Saepe voluptates dolor
+                iusto ex corrupti molestiae similique ullam itaque dolore aliquam perferendis temporibus nisi
+                repellendus
+                mollitia et at asperiores natus accusantium nam qui, debitis quaerat! Accusantium asperiores ratione
+                illo,
+                corrupti saepe exercitationem sit tempore? Voluptatem ea quaerat nisi?</p>
+            <a class="hire-btn" target="_blank" href="https:\\www.google.com">HIRE ME</a>
+        </div>
+
+
+        <div class="part2">
+            <img src="images/cartoon.jpg" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
