--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>My Portfolio</title>
 </head>
 
 <body>
-    <section class="banner">
-        <div class="part1">
+    <section class="banner flexible-container">
+        <div class="half-width">
             <h1>Welcome to</h1>
-            <h1><span>Ubaydur Rahman's</span> World!</h1>
+            <h1><span>Tom & Jerry's</span> World!</h1>
             <h3>Lorem ipsum dolor sit amet.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, quas asperiores. Saepe voluptates dolor
                 iusto ex corrupti molestiae similique ullam itaque dolore aliquam perferendis temporibus nisi
@@ -21,14 +24,62 @@
                 mollitia et at asperiores natus accusantium nam qui, debitis quaerat! Accusantium asperiores ratione
                 illo,
                 corrupti saepe exercitationem sit tempore? Voluptatem ea quaerat nisi?</p>
-            <a class="hire-btn" target="_blank" href="https:\\www.google.com">HIRE ME</a>
+            <a class="link-btn" target="_blank" href="https:\\www.google.com">Tom & Jerry</a>
         </div>
 
 
-        <div class="part2">
-            <img src="images/cartoon.jpg" alt="">
+        <div class="half-width">
+            <img src="images/22-220818_tom-and-jerry-tom-and-jerry-png.jpg" alt="">
         </div>
     </section>
+
+
+    <section class="dream-big flexible-container">
+        <div class="half-width">
+            <img src="images/215445.webp" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream-Fighter</h1>
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam quae adipisci praesentium magni
+                deleniti recusandae ipsam quasi, id fugiat qui. Tenetur cupiditate ducimus labore ipsa veniam qui magni
+                voluptates quis!
+            </p>
+            <a class="link-btn" target="_blank" href="https:\\www.google.com">Tom & Jerry</a>
+        </div>
+    </section>
+
+
+    <section class="experiences-area">
+
+        <h1>Experiences</h1>
+
+        <div class="flexible-container">
+            <div id="Full-stack-experience" class="half-width cart-box">
+                <h2>Full Stack Web Developer</h2>
+                <h3>2021-Present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatem illum aspernatur
+                    voluptate labore harum amet optio consequatur. Perferendis modi unde sapiente repudiandae inventore
+                    officia, neque labore nesciunt vel eos.
+                </p>
+            </div>
+
+            <div id="Baby-stack-experience" class="half-width cart-box">
+                <h2>Baby Web Developer</h2>
+                <h3>2020-2021 | Programming Hero Learner</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatem illum aspernatur
+                    voluptate labore harum amet optio consequatur. Perferendis modi unde sapiente repudiandae inventore
+                    officia, neque labore nesciunt vel eos.
+                </p>
+            </div>
+        </div>
+
+    </section>
+
+    <footer>
+        <p>© Tom & Jerry 2022, Self-learning .</p>
+    </footer>
+
 </body>
 
 </html>
