--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
         <h1>Experiences</h1>
 
-        <div class="flexible-container">
+        <div class=" exp-area flexible-container">
             <div id="Full-stack-experience" class="half-width cart-box">
-                <h2>Full Stack Web Developer</h2>
-                <h3>2021-Present | Pro Level Developer</h3>
+                <h2>Tom & Jerry Heavvy Fight</h2>
+                <h3>2021-Present | Pro Level Fighter</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatem illum aspernatur
                     voluptate labore harum amet optio consequatur. Perferendis modi unde sapiente repudiandae inventore
                     officia, neque labore nesciunt vel eos.
@@ -65,8 +65,8 @@
             </div>
 
             <div id="Baby-stack-experience" class="half-width cart-box">
-                <h2>Baby Web Developer</h2>
-                <h3>2020-2021 | Programming Hero Learner</h3>
+                <h2>Tom & Jerry Light Fight</h2>
+                <h3>2020-2021 | Learner Level Fighter</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis voluptatem illum aspernatur
                     voluptate labore harum amet optio consequatur. Perferendis modi unde sapiente repudiandae inventore
                     officia, neque labore nesciunt vel eos.
